# ff1pr-autosplitter

./: Cargo.toml  README.md  build.rs
.cargo/: config.toml
.github/workflows/: build.yml
src/: data.rs  game.rs  lib.rs  splits.rs
